# python_skel

./: .gitignore  Makefile  README.md  bootstrap.sh  rename.sh  requirements.txt  setup.cfg  setup.py
myproject/: cli.py  main.py  web.py
myproject/backend/: sample.py
myproject/rest/: api.py  web_sample.py
myproject/utils/: __init__.py  configuration.py  rest.py  web.py  webcfg.py
tests/: __init__.py  conftest.py  test_cli.py  test_main.py  test_rest_api.py  test_rest_sample.py  test_sample.py
