[bdist_wheel]
universal=0

[pycodestyle]
max_line_length = 120
ignore = E501 E402

[flake8]
ignore = E501 E402

[tool:pytest]
flake8-ignore = E501 E402
testpaths = tests
filterwarnings =
    ignore::UserWarning
    ignore::FutureWarning
    ignore::DeprecationWarning
log_cli=false
log_level=WARN

[metadata]
name = myproject
version = 0.1.0
description = 'Python skeleton'
long_description = file: README.md
keywords = 'python'
license = 'Apache 2.0 License'
author = 'Michele Sacchetti'
author_email = 'michele.sacchetti@aroundthecode.org'
classifiers = [
    'Development Status :: 3 - Alpha'
    'Intended Audience :: Developers'
    'License :: OSI Approved :: Apache 2.0 License'
    'Programming Language :: Python :: 3.6' ]

[options]
packages = find:
install_requires =


[options.extras_require]
test =
    pytest==5.2.0
    coverage==4.5.4
    pytest-flake8==1.0.4
    pytest-cov==2.8.1
    flake8==3.7.9

profile =
    Pympler==0.8
